--- a/frontend/src/style/constants.scss
+++ b/frontend/src/style/constants.scss
@@ -7,9 +7,12 @@ $min-width-desktop: 1200px;
 // COLORS
 $pink: #F60CB9;
 $blue: #066EE7;
+$darkblue: #0562CE;
+$white: #FFF;
 $blue-hover: #0562CE;
 $fse-blue: #004fa2;
 $gray: #B7B5C6;
+$disabled-gray: #eee;
 $violet: #351D4E;
 $gray-font: #333;
 $lightgray: #DBDBDB;
