--- a/frontend/src/components/company_details/company_details.scss
+++ b/frontend/src/components/company_details/company_details.scss
@@ -2,6 +2,8 @@
 
 #company-details {
 
+    @include mx-company-details();
+
     .content {
         margin-bottom: 150px;
     }
@@ -22,19 +24,6 @@
         }
     }
 
-    hr {
-        margin: 30px 0;
-    }
-
-    .title strong {
-        color: $blue;
-        font-size: 1.5em;
-        margin: 0;
-    }
-
-    h4 { margin: 15px 0; }
-    h5 { margin: 5px 0; }
-
     .contact .icon {
         margin-right: 5px;
     }
@@ -49,10 +38,14 @@
         padding-right: 10px;
     }
 
+    .company-phone-email {
+        margin-top: 50px;
+    }
+
     .company-footer {
         padding: 1px;
         text-align: center;
-        margin-top: 70px;
+        margin-top: 50px;
         background-color: $lightgray;
         font-size: .8em;
 
