--- a/frontend/src/components/company_details/company_details.scss
+++ b/frontend/src/components/company_details/company_details.scss
@@ -12,15 +12,21 @@
         // position: sticky; top: 0; // Not working on mobile !
         text-align: right;
         color: black;
-        padding: 20px 10px 5px 10px;
+        padding: 30px 0 10px 0;
         background-color: white;
         z-index: 4000;
 
         > button {
             border: none;
+            float: left;
             background: transparent;
-            margin-left: 10px;
             z-index: 4000;
+
+            > span {
+                height: 35px;
+                width: 35px;
+                background-size: contain;
+            }
         }
     }
 
