--- a/frontend/src/style/global.scss
+++ b/frontend/src/style/global.scss
@@ -32,7 +32,9 @@ html, body, #root, #app {
 // Generic classes
 .sr-only { position: absolute !important; left: -10000px !important; top: -10000px !important; }
 ul.list-unstyled {
-    margin: 0; padding: 0; list-style: none;
+    margin: 0 !important;
+    padding: 0 !important;
+    list-style: none;
     &.inline-list li {
         display: inline-block;
         margin-right: 15px;
