Fix centering troubles on detail modal

--- a/frontend/src/style/mixins.scss
+++ b/frontend/src/style/mixins.scss
@@ -454,7 +454,7 @@
         ul {
             display: flex;
             max-width: 70%;
-            margin: auto;
+            margin: auto !important;
             padding: 0;
 
             > li {
