--- a/frontend/src/style/mixins.scss
+++ b/frontend/src/style/mixins.scss
@@ -379,7 +379,7 @@
                 margin-right: 0;
             }
         }
-        .website a { color: $blue; text-decoration: none; }
+        .website a, .offers a { color: $blue; text-decoration: none; }
         .padding { padding: 15px 0; }
 
         h1 {
