Minor SASS DNRY refactoring

--- a/frontend/src/components/companies/companies.scss
+++ b/frontend/src/components/companies/companies.scss
@@ -254,8 +254,7 @@
         border-bottom: solid 2px #EDEDED;
         &:last-child { border-bottom: none; }
 
-        .label-hidden-market {
-            background-color: #51128A;
+        .label {
             color: white;
             border-radius: 15px;
             padding: 5px 10px;
@@ -265,20 +264,16 @@
             margin-bottom: 5px;
             border: none;
             display: inline-block;
+
+            &.hidden-market {
+                background-color: #51128A;
+            }
+
+            &.visible-market {
+                background-color: #CF0096;
+            }
         }
 
-        .label-visible-market {
-            background-color: #CF0096;
-            color: white;
-            border-radius: 15px;
-            padding: 5px 10px;
-            font-size: 14px;
-            text-align: center;
-            text-decoration: none;
-            margin-bottom: 5px;
-            border: none;
-            display: inline-block;
-        }
 
         .distance {
             font-size: .8em;
