--- a/frontend/src/style/global.scss
+++ b/frontend/src/style/global.scss
@@ -100,7 +100,10 @@ button.close {
 
 // Loading animation
 .loading-dotted {
-    color: black;
+    text-align: center;
+    margin: 50px;
+    color: white;
+ 
     &:after {
         display: inline-block;
         animation: dotty steps(1,end) 1s infinite;
