design and wording fix

--- a/frontend/src/style/mixins.scss
+++ b/frontend/src/style/mixins.scss
@@ -104,7 +104,7 @@
         position: relative;
 
         background-size: cover;
-        background-color: white;
+        background-color: #281d09; /* color from the bg image */
         background-attachment: fixed;
         background-position: center;
         background-image: url('/static/img/fd-desktop.jpg');
