--- a/frontend/src/components/home/home.scss
+++ b/frontend/src/components/home/home.scss
@@ -81,11 +81,11 @@
             background-color: white;
             strong {
               display: block;
-              color: $fse-blue;
+              color: $blue;
               font-weight: bold;
             }
             .button {
-              margin-top: 40px;
+              margin-top: 20px;
               font-size: inherit;
             }
 
