info depends on the type of company (offer, dpae, alternance)

--- a/frontend/src/style/global.scss
+++ b/frontend/src/style/global.scss
@@ -356,7 +356,7 @@ textarea {
 
     &.open {
         > .toggle-content {
-            max-height: 100px;
+            max-height: unset;
             margin: 20px;
         }
         h2 button img.icon {
